# frosch

./: CMakeLists.txt  README.md
examples/: presentation_tour.md  test.md
include/: dashboard.hpp  presentation.hpp  utils.hpp
src/: dashboard.cpp  main.cpp  presentation.cpp  utils.cpp
